# sdl_cpp_game

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Documentation.md  README.md  compile_flags.txt
documentation/: Game.md
documentation/Builds/: WebGL.md  macOS.md
documentation/GameObjects/: RectRenderObject.md
fonts/: Emulogic.h
fonts/Roboto/: Roboto-Regular.h
images/: galaga_bullet_1.h  galaga_enemy_1.h  galaga_ship.h  level.h  pico-8-tilemap.h  roxzilla-attack.h  roxzilla-hit.h  roxzilla-idle.h  roxzilla-walk.h  scott-pilgrim-idle.h  scott-pilgrim-punch.h  scott-pilgrim-run.h
include/Handcrank/: Handcrank.hpp  ImageRenderObject.hpp  RectRenderObject.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  Utilities.hpp  Vector2.hpp  Vector3.hpp
includes/: Game.h  Game.hpp  GameObject.h  GameObject.hpp  ImageRenderObject.h  ImageRenderObject.hpp  RectRenderObject.h  RectRenderObject.hpp  RenderObject.h  TextRenderObject.h  TextRenderObject.hpp  Utilities.h
includes/Handcrank/: Game.hpp  GameObject.hpp  Handcrank.hpp  ImageRenderObject.hpp  RectRenderObject.hpp  RenderObject.hpp  TextRenderObject.hpp  Utilities.hpp  Vector2.hpp  Vector3.hpp
includes/lib/: SDL_Image_Utilities.h  SDL_TTF_Utilities.h  SDL_Utilities.h
includes/sdl/: SDL_Image_Utilities.h  SDL_TTF_Utilities.h  SDL_Texture_Deleter.h  SDL_Utilities.h
src/: GalagaBullet.hpp  GalagaEnemy.hpp  GalagaShip.hpp  Game.cpp  GameManager.hpp  GameObject.cpp  ImageRenderObject.cpp  RectRenderObject.cpp  RenderObject.cpp  ScottPilgrim.hpp  TextRenderObject.cpp  main.cpp
src/Breakout/: Ball.hpp  GameManager.hpp  Paddle.hpp
src/FrameRateTester/: GameManager.hpp
src/Galaga/: GalagaBullet.hpp  GalagaEnemy.hpp  GalagaShip.hpp  GameManager.hpp
templates/: webgl_shell.html
(+16 files in other folders)
